--- a/sass/_contact.sass
+++ b/sass/_contact.sass
@@ -5,6 +5,10 @@
   justify-content: center
   height: 100vh
 
+  &__error-msg
+    color: red
+    font-size: 1.3rem
+
 .contact-form
   display: flex
   flex-direction: column
