--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -2,6 +2,7 @@
   &,
   &:link,
   &:visited
+    -webkit-appearance: none
     text-transform: uppercase
     text-decoration: none
     padding: 1.8rem 4rem
