--- a/sass/components/_popup.sass
+++ b/sass/components/_popup.sass
@@ -1,16 +1,15 @@
 .popup
-  display: flex
   align-items: center
   justify-content: center
   height: 100vh
   width: 100%
+  display: none
   position: fixed
   background-color: rgba($color-black, .8)
   z-index: 10
 
   opacity: 0
   visibility: hidden
-  transition: all .3s
 
   @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))
     -webkit-backdrop-filter: blur(10px)
@@ -20,14 +19,12 @@
   &__container
     position: relative
     border-radius: $border-radius
-    display: flex
+    display: none
     padding: 5rem
     background-color: $color-white
     opacity: 0
-    transform: scale(.5)
-    transition: all .4s .2s
 
-    @media only screen and (max-width: $bp-medium)
+    @media only screen and (max-width: $bp-small)
       flex-direction: column
       width: 90%
 
@@ -98,10 +95,12 @@
 
   &:target
     opacity: 1
+    display: flex
     visibility: visible
 
   &:target &__container
     opacity: 1
+    display: flex
     transform: scale(1)
 
   &__close
